--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
-        "twilio/sdk": "^5.34"
+        "twilio/sdk": "^5.34",
+        "yajra/laravel-datatables-oracle": "^9.6"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
