--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "laravel/cashier": "~9.3",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
         "laravel/socialite": "^4.1",
