--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.1.3",
         "appzcoder/laravel-admin": "^3.1",
         "fideloper/proxy": "^4.0",
+        "brozot/laravel-fcm": "^1.2",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/cashier": "~9.3",
         "laravel/framework": "5.8.*",
