--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,10 @@
     "require": {
         "php": "^7.1.3",
         "appzcoder/laravel-admin": "^3.1",
-        "fideloper/proxy": "^4.0",
         "brozot/laravel-fcm": "^1.2",
+        "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
+        "intervention/image": "^2.5",
         "laravel/cashier": "~9.3",
         "laravel/framework": "5.8.*",
         "laravel/passport": "^7.3",
