--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "twilio/sdk": "^5.34",
-        "yajra/laravel-datatables-oracle": "^9.6"
+        "yajra/laravel-datatables-oracle": "^9.6",
+         "symfony/translation": "4.3.8"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
